Fixed compatibility to Java 8